--- a/alleopskrifter.html
+++ b/alleopskrifter.html
@@ -44,7 +44,7 @@
 
           <!-- Custom dropdown-menu til sæsoner-->
           <li class="nav-item dropdown vores-dropdown">
-            <a class="nav-link dropbtn dropdown-toggle" href="alleopskrifter.html">Opskrifter</a>
+            <a class="nav-link dropbtn dropdown-toggle aktiv" href="alleopskrifter.html">Opskrifter</a>
             <div class="dropdown-content">
               <a href="sommer.html">Sommer</a>
               <a href="efteraar.html">Efterår</a>
