--- a/kontakt.html
+++ b/kontakt.html
@@ -59,7 +59,7 @@
           <li class="nav-item">
             <a class="nav-link" href="omos.html">Om Os</a>
           </li>
-          <li class="nav-item">
+          <li class="nav-item aktiv">
             <a class="nav-link" href="kontakt.html">Kontakt</a>
           </li>
         </ul>
