--- a/omos.html
+++ b/omos.html
@@ -56,7 +56,7 @@
           <li class="nav-item">
             <a class="nav-link" href="faellesskaal.html">Fælles-skål</a>
           </li>
-          <li class="nav-item">
+          <li class="nav-item aktiv">
             <a class="nav-link" href="omos.html">Om Os</a>
           </li>
           <li class="nav-item">
