--- a/faellesskaal.html
+++ b/faellesskaal.html
@@ -53,7 +53,7 @@
           </li>
 
           <!--Andre links-->
-          <li class="nav-item">
+          <li class="nav-item aktiv">
             <a class="nav-link" href="faellesskaal.html">Fælles-skål</a>
           </li>
           <li class="nav-item">
@@ -161,15 +161,8 @@
         <!-- Kolonne: 12 på mobil, 6 på mellemstore skærme (≥768px)-->
         <article class="col-12 col-md-6 tilmelding-boks-faellesskaal">
           <h2>Bliv inspireret i din indbakke</h2>
-          <p>Madglæde stopper ikke ved køkkenbordet - den lever også videre online.
-            Vores digitale fællesskab er til dig, der elsker at nørde med budgetvenlig mad, finde nye idéer med sæsonens
-            råvarer og dele hverdagsglimt fra køkkenet. På både vores website og Instagram skaber vi et ærligt og
-            uformelt madunivers, hvor du kan finde og dele opskrifter, tips og madstemning – sammen med andre, der
-            elsker mad på samme måde som dig.
-            <br>
-            Hos Lille Skål tror vi på, at inspiration og fællesskab sagtens kan leve på tværs af skærme – og vi glæder
-            os til at være fælles med dig, også digitalt.
-          </p>
+          <p>Hos Lille Skål lever madglæden videre langt ud over køkkenbordet. Vores online madunivers er skabt til dig, der elsker budgetvenlige opskrifter, sæsonens råvarer og ærlig madinspiration i øjenhøjde. <br> <br> På vores website og Instagram deler vi nemme hverdagsretter, tips til mindre madspild og hyggelige madøjeblikke - alt sammen i et uformelt fællesskab med andre madglade unge. 
+            <br><br> Vil du se, hvad der rører sig netop nu? Tag et kig til højre og få et sneak peek af den aktuelle udgave af vores e-magasin, hvor du finder friske opskrifter, event info og meget mere </p>
 
           <!--Kan skrive sin mail vha. js og få mail m. e-magasin-->
           <form id="contact-form">
@@ -184,7 +177,7 @@
           <div class="container">
             <div class="embed-responsive embed-responsive-16by9">
               <iframe class="embed-responsive-item"
-                src="https://indd.adobe.com/view/dbe62e7f-2229-48da-bee9-96d6d8065d1f" allowfullscreen
+                src="https://indd.adobe.com/view/6a569d29-6ebe-4611-adc8-015d6ba0168f" allowfullscreen
                 style="border: none; width: 100%; height: 400px;">
               </iframe>
             </div>
