--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Lille Skål: et sæsonbaserede madunivers</title>
-  <meta name="description" content="Lille Skål er en madplatform med fokus på sæsonens råvarer, fællesskab og bæredygtige opskrifter for unge i Storkøbenhavn.">
+  <meta name="description"
+    content="Lille Skål er en madplatform med fokus på sæsonens råvarer, fællesskab og bæredygtige opskrifter for unge i Storkøbenhavn.">
 
 
   <!--Bootstrap CSS-->
@@ -75,35 +76,30 @@
        =========================== -->
   <!--ØVERSTE BILLEDE AF RET-->
   <!--To forskellige billeder ud fra om det er mobil eller tablet/desktop -->
-  <div class="hero-sektion position-relative">
-    <picture>
-      <source media="(min-width: 768px)" srcset="img/forsidebillede.png">
-      <img src="img/forsidemobil.png" alt="billede af de to kokke i køkkenet, en drikker vin den anden står med en peberkværn, på køkkenet er der pizza de er i gang med at lave">
-    </picture>
-    <!--Tekst & logo over baggrundsbillede-->
-    <!--position-absolute top-0 start 0: placer indholdet i øverste venstre hjørne-->
-    <!--w-100 h-100: gør overlay lige så stort som billedet-->
-    <!--d-flex ....: centrerer tekst midt i billedet-->
-    <div
-      class="position-absolute top-0 start-0 w-100 h-100 d-flex flex-column justify-content-center       align-items-center text-center">
-      <img class="logo-forside" src="img/logovandmaling.png" alt="Lilleskål logo">
-<<<<<<< HEAD
-      <h4 class="call-to-action"><a href="alleopskrifter.html">
-=======
-      <img class="logo-forside" src="img/logovandmaling.png" alt="">
-      <h4 class="call-to-action"><a href="alleopskrifter.html">
->>>>>>> a69afbdbf49a2fd242c645de1bbc944293d27710
-=======
-      <div class="call-to-action"><a href="alleopskrifter.html">
->>>>>>> ab68543f27c4d8006c2209465711da1732171e90
-          <picture>
-            <source media="(min-width: 768px)" srcset="img/opskriftknapstor.png">
-            <img src="img/opskriftknapmobil.png" alt="">
-          </picture>
-        </a></div>
-    </div>
+  <header>
+      <div class="hero-sektion position-relative">
+        <picture>
+          <source media="(min-width: 768px)" srcset="img/forsidebillede.png">
+          <img src="img/forsidemobil.png"
+            alt="billede af de to kokke i køkkenet, en drikker vin den anden står med en peberkværn, på køkkenet er der pizza de er i gang med at lave">
+        </picture>
+      </div>
+      <!--Tekst & logo over baggrundsbillede-->
+      <!--position-absolute top-0 start 0: placer indholdet i øverste venstre hjørne-->
+      <!--w-100 h-100: gør overlay lige så stort som billedet-->
+      <!--d-flex ....: centrerer tekst midt i billedet-->
+      <div class="position-absolute top-0 start-0 w-100 h-100 d-flex flex-column justify-content-center
+        align-items-center text-center">
+        <img class="logo-forside" src="img/logovandmaling.png" alt="Lilleskål logo">
+        <h4 class="call-to-action"><a href="alleopskrifter.html">
+            <picture>
+              <source media="(min-width: 768px)" srcset="img/opskriftknapstor.png">
+              <img src="img/opskriftknapmobil.png" alt="">
+            </picture>
+          </a></h4> 
+      </div>
   </header>
-  
+
 
   <!-- ===========================
        INTRO-SEKTION
