--- a/kontakt.html
+++ b/kontakt.html
@@ -72,9 +72,6 @@
        BAGGRUND SOM ER ET PAPIR
        =========================== -->
 
-
-
-
 <main class="custom-container py-3">
   <div class="row align-items-start">
 
@@ -89,8 +86,9 @@
       <!-- Tekst ovenpå billedet -->
       <div class="position-absolute p-4">
         <h1>Kontakt os:</h1>
-
+      <!-- Første række med telefon og mail -->
         <div class="row">
+          <!--Kolonne: 12 kol;fylder hele bredden på mobil, col-sm-7: fylder 7/12 på små og større skærme -->
           <p class="col-12 col-sm-7">Telefon.nr.:
             <a href="tel:+45271478**">+45 27 14 78 **</a>
           </p>
@@ -98,7 +96,7 @@
             <a href="mailto:lille@skaal.dk">lille@skaal.dk</a>
           </p>
         </div>
-
+      <!-- Anden række med adresse og Instagram -->
         <div class="row">
           <p class="col-7">Find os her:
             <br>
