--- a/vinter3.html
+++ b/vinter3.html
@@ -47,7 +47,7 @@
             <div class="dropdown-content">
               <a href="sommer.html">Sommer</a>
               <a href="efteraar.html">Efterår</a>
-              <a href="vinter.html">Vinter</a>
+              <a class="aktiv" href="vinter.html">Vinter</a>
               <a href="foraar.html">Forår</a>
             </div>
           </li>
