--- a/foraar2.html
+++ b/foraar2.html
@@ -48,7 +48,7 @@
               <a href="sommer.html">Sommer</a>
               <a href="efteraar.html">Efterår</a>
               <a href="vinter.html">Vinter</a>
-              <a href="foraar.html">Forår</a>
+              <a class="aktiv" href="foraar.html">Forår</a>
             </div>
           </li>
 
