--- a/sommer1.html
+++ b/sommer1.html
@@ -45,7 +45,7 @@
           <li class="nav-item dropdown vores-dropdown">
             <a class="nav-link dropbtn dropdown-toggle" href="alleopskrifter.html">Opskrifter</a>
             <div class="dropdown-content">
-              <a href="sommer.html">Sommer</a>
+              <a class="aktiv" href="sommer.html">Sommer</a>
               <a href="efteraar.html">Efterår</a>
               <a href="vinter.html">Vinter</a>
               <a href="foraar.html">Forår</a>
