--- a/kontakt.html
+++ b/kontakt.html
@@ -85,7 +85,7 @@
 
       <!-- Tekst ovenpå billedet -->
       <div class="position-absolute p-4">
-        <h1>Kontakt os:</h1>
+        <h1 class="overskrift-kontakt">Kontakt os:</h1>
       <!-- Første række med telefon og mail -->
         <div class="row">
           <!--Kolonne: 12 kol;fylder hele bredden på mobil, col-sm-7: fylder 7/12 på små og større skærme -->
