--- a/efteraar3.html
+++ b/efteraar3.html
@@ -4,7 +4,8 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>EEfterårspande med karamelliserede porrer og gulerødder</title>
+  <title>Efterårspande med karamelliserede porrer og gulerødder | Lille Skål</title>
+  <meta name="description" content="Nem og velsmagende efterårsopskrift: Porrer og gulerødder karamelliseret til perfektion med citron og persille. Perfekt til en lun og hyggelig hverdagsmiddag!">
 
   <!--Bootstrap CSS-->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/css/bootstrap.min.css" rel="stylesheet"
