--- a/index.html
+++ b/index.html
@@ -4,9 +4,9 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Lille Skål: et sæsonbaserede madunivers</title>
+  <title>Lille Skål | Sæsonbaserede, Bæredygtige Opskrifter & Madfællesskab i Storkøbenhavn</title>
   <meta name="description"
-    content="Lille Skål er en madplatform med fokus på sæsonens råvarer, fællesskab og bæredygtige opskrifter for unge i Storkøbenhavn.">
+    content="Oplev Lille Skål - din madplatform med fokus på sæsonens friske råvarer, bæredygtige og budgetvenlige opskrifter samt et inspirerende fællesskab for unge i Storkøbenhavn.">
 
 
   <!--Bootstrap CSS-->
