--- a/alleopskrifter.html
+++ b/alleopskrifter.html
@@ -4,7 +4,9 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Alle opskrifter</title>
+  <title>Alle Opskrifter - Sæsonbaserede Retter fra Lille Skål</title>
+  <meta name="description" content="Se alle Lille Skåls lækre opskrifter samlet ét sted. Sæsonbaserede retter til små budgetter - fra friske sommerretter til varme vintermåltider.">
+
 
   <!--Bootstrap CSS-->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/css/bootstrap.min.css" rel="stylesheet"
