--- a/efteraar.html
+++ b/efteraar.html
@@ -4,7 +4,9 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Efterårs Opskrifter</title>
+  <title>Efterårsopskrifter | Sæsonens bedste retter med græskar, æbler og rodfrugter | Lille Skål</title>
+  <meta name="description" content="Find efterårets bedste opskrifter med sæsonens råvarer som græskar, rødbeder og æbler. Perfekte retter til hyggelige middage og varme aftener.">
+
 
   <!--Bootstrap CSS-->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/css/bootstrap.min.css" rel="stylesheet"
@@ -102,7 +104,7 @@
       <!-- Kolonne: 12 på mobil, 7 på små skærme (576px) og op -->
       <div class="col-12 col-md-6 py-4">
         <h2>Efterårets Lune Retter</h2>
-        <p>Her finder du opskrifter med alt det bedste fra efteråret – som græskar, rødbeder, pastinak og æbler. Retter,
+        <p>Her finder du opskrifter med alt det bedste fra efteråret - som græskar, rødbeder, pastinak og æbler. Retter,
           der smager af stearinlys, tæpper og lange, hyggelige middage med dem, du holder af.
         </p>
       </div>
