--- a/efteraar1.html
+++ b/efteraar1.html
@@ -4,7 +4,9 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Efterårssuppe med Hokkaido, gulerod og ingefær</title>
+  <title>Efterårssuppe med Hokkaido, Gulerod og Ingefær | Lilleskål</title>
+  <meta name="description" content="Cremet efterårssuppe med Hokkaido, gulerod og ingefær - perfekt til kolde dage. Nem opskrift med få ingredienser og masser af smag.">
+
 
   <!--Bootstrap CSS-->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/css/bootstrap.min.css" rel="stylesheet"
