--- a/faellesskaal.html
+++ b/faellesskaal.html
@@ -4,7 +4,8 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Fælles-skål</title>
+  <title>Fælles-skål - Madglæde og fællesskab for unge</title>
+  <meta name="description" content="Fælles-skål er et varmt og ærligt univers for unge, der elsker madglæde, bæredygtighed og fællesskab. Find opskrifter, events og inspiration til budgetvenlig madlavning.">
 
   <!--Bootstrap CSS-->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/css/bootstrap.min.css" rel="stylesheet"
