--- a/foraar.html
+++ b/foraar.html
@@ -4,7 +4,8 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Forårs Opskrifter</title>
+  <title>Forårs Opskrifter | Friske og Lækre Retter med Sæsonens Grønt</title>
+  <meta name="description" content="Oplev smagen af forår med lækre opskrifter fulde af friske råvarer som asparges, spinat og radiser. Enkle og inspirerende retter til lyse, varme dage.">
 
   <!--Bootstrap CSS-->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/css/bootstrap.min.css" rel="stylesheet"
