--- a/foraar1.html
+++ b/foraar1.html
@@ -4,7 +4,8 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Pasta med tomat, spidskål og ramsløgspesto</title>
+  <title>Pasta med tomat, spidskål og ramsløgspesto - Lækker forårsopskrift | Lille Skål</title>
+  <meta name="description" content="Prøv denne nemme og lækre opskrift på pasta med cremet ramsløgspesto, søde tomater og letstegt spidskål. Perfekt til en solrig forårsaften - klar på 50 minutter!">
 
   <!--Bootstrap CSS-->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/css/bootstrap.min.css" rel="stylesheet"
