--- a/foraar2.html
+++ b/foraar2.html
@@ -4,7 +4,8 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Forårs-orzo med tomater og citron</title>
+  <title>Forårs-orzo med tomater og citron | Lille Skål</title>
+  <meta name="description" content="Lun og frisk forårs-orzo med søde tomater, spinat og citron - en nem og lækker pastaret fyldt med smag af forår. Perfekt til hurtig aftensmad.">
 
   <!--Bootstrap CSS-->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/css/bootstrap.min.css" rel="stylesheet"
