--- a/foraar3.html
+++ b/foraar3.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Forårsnudler med radiser, porre og sesam</title>
+  <title>Forårsnudler med radiser, porre og sesam - Let og frisk opskrift | Lille Skål</title>
 
   <!--Bootstrap CSS-->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/css/bootstrap.min.css" rel="stylesheet"
