--- a/kontakt.html
+++ b/kontakt.html
@@ -4,7 +4,8 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Kontakt os</title>
+  <title>Kontakt Lille Skål - Telefon, Email & Adresse</title>
+  <meta name="description" content="Kontakt Lille Skål for spørgsmål, samarbejde eller feedback. Find vores telefonnummer, email, adresse i Kongens Lyngby og følg os på Instagram.">
 
   <!--Bootstrap CSS-->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/css/bootstrap.min.css" rel="stylesheet"
