--- a/omos.html
+++ b/omos.html
@@ -4,7 +4,8 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Om Os</title>
+  <title>Om Os - Mød Holdet Bag Lilleskål</title>
+  <meta name="description" content="Lær Amalie og Lærke at kende - vores passionerede kokke, og Katrine og Marie, som skaber det visuelle univers bag Lilleskål. Vi brænder for madlavning, fællesskab og sæsonens råvarer.">
 
   <!--Bootstrap CSS-->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/css/bootstrap.min.css" rel="stylesheet"
