--- a/sommer1.html
+++ b/sommer1.html
@@ -4,7 +4,8 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Sommersalat med jordbær, burrata og nem focaccia</title>
+  <title>Sommersalat med jordbær, burrata og nem focaccia | Lille Skål</title>
+  <meta name="description" content="Nyd en frisk og lækker sommersalat med danske jordbær, cremet burrata og sprøde mandler. Serveret med hjemmelavet nem focaccia - perfekt til sommerens måltider.">
 
   <!--Bootstrap CSS-->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/css/bootstrap.min.css" rel="stylesheet"
