--- a/sommer2.html
+++ b/sommer2.html
@@ -4,8 +4,9 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Sommer-tacos med ærtemos og grillede grøntsager</title>
-
+  <title>Sommer-tacos med ærtemos og grillede grøntsager | Lille Skål</title>
+  <meta name="description" content="Prøv vores nemme og lækre opskrift på sommer-tacos med cremet ærtemos og grillede grøntsager. Perfekt til hyggelige venneaftener og sæsonens friske råvarer.">
+  
   <!--Bootstrap CSS-->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-4Q6Gf2aSP4eDXB8Miphtr37CMZZQ5oXLH2yaXMJ2w8e2ZtHTl7GptT4jmndRuHDT" crossorigin="anonymous">
