--- a/sommer3.html
+++ b/sommer3.html
@@ -4,7 +4,8 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Sommerpizza med sæsonens grønt og sprød bund</title>
+  <title>Sommerpizza med sprød bund og sæsonens friske grøntsager | Lille Skål</title>
+  <meta name="description" content="Nem og lækker sommerpizza med sprød bund, frisk tomatsauce og sæsonens grønne grøntsager. Perfekt til hyggelige sommeraftener - prøv opskriften her!">
 
   <!--Bootstrap CSS-->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/css/bootstrap.min.css" rel="stylesheet"
