--- a/vinter1.html
+++ b/vinter1.html
@@ -4,7 +4,8 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Vinter-nudler med porre, kål og cremet sesamsauce</title>
+  <title>Vinter-nudler med porre, kål og cremet sesamsauce | Lille Skål</title>
+  <meta name="description" content="Nyd en nudelret med sprød kål, sødme fra porre og en cremet asiatisk sesamsauce. Perfekt vintermåltid til kolde aftener - nem og lækker opskrift til 2 personer.">
 
   <!--Bootstrap CSS-->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/css/bootstrap.min.css" rel="stylesheet"
