--- a/vinter2.html
+++ b/vinter2.html
@@ -4,7 +4,9 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Vinter-pasta med grønkålssauce og citron</title>
+  <title>Vinter-pasta med grønkålssauce og citron | Lille Skål</title>
+  <meta name="description" content="Prøv denne lækre og nemme vinter-pasta med grønkålssauce og frisk citron. En varm, cremet ret fyldt med sæsonens bedste blade - perfekt til kolde dage.">
+
 
   <!--Bootstrap CSS-->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/css/bootstrap.min.css" rel="stylesheet"
