--- a/vinter3.html
+++ b/vinter3.html
@@ -4,7 +4,8 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Vinterpande med grønkål, svampe og flødestuvet perlebyg</title>
+  <title>Vinterpande med grønkål, svampe og flødestuvet perlebyg | Lille Skål</title>
+  <meta name="description" content="Opskrift på en cremet og mættende vinteropskrift med grønkål, svampe og flødestuvet perlebyg. Hurtig og nem hverdagsmad, der varmer på kolde dage.">
 
   <!--Bootstrap CSS-->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/css/bootstrap.min.css" rel="stylesheet"
