--- a/foraar3.html
+++ b/foraar3.html
@@ -5,6 +5,7 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Forårsnudler med radiser, porre og sesam - Let og frisk opskrift | Lille Skål</title>
+  <meta name="description" content="Let og frisk forårsnudler med sprøde radiser, mild porre og ristet sesam – en nem og smagfuld ret fyldt med sæsonens grønt. Perfekt til en hurtig og let forårsmiddag.">
 
   <!--Bootstrap CSS-->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/css/bootstrap.min.css" rel="stylesheet"
