--- a/sommer.html
+++ b/sommer.html
@@ -5,6 +5,8 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Sommer Opskrifter | Friske og Lækre Retter til Solrige Dage | Lille Skål</title>
+  <meta name="description" content="Oplev smagen af sommer med friske og farverige opskrifter fyldt med squash, jordbær, ærter og spidskål. Enkle og inspirerende retter til solrige dage og lune aftener.">
+
 
   <!--Bootstrap CSS-->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/css/bootstrap.min.css" rel="stylesheet"
