--- a/vinter.html
+++ b/vinter.html
@@ -5,6 +5,7 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Vinter Opskrifter | Varme og hyggelige retter med sæsonens råvarer</title>
+  <meta name="description" content="Oplev vinterens smage med varme og hyggelige opskrifter fyldt med sæsonens råvarer som rodfrugter, kål og citrus. Enkle og inspirerende retter til kolde, mørke dage.">
 
   <!--Bootstrap CSS-->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/css/bootstrap.min.css" rel="stylesheet"
