--- a/alleopskrifter.html
+++ b/alleopskrifter.html
@@ -76,7 +76,7 @@
        =========================== -->
   <header class="custom-container">
     <!--Grid-række fra BS-->
-    <div class="row align-items-start my-5">
+    <div class="row align-items-start my-5 introduktion">
       <!--Tekstfelt til venstre-->
       <!-- Kolonne: 12 på mobil, 7 på små skærme (576px) og op -->
       <div class="col-12 col-sm-7">
@@ -102,7 +102,7 @@
        =========================== -->
   <!--Orange baggrund-->
   <!--Skjules fra medium skærm (768px) og ned-->
-  <section id="alle-foraar" class="orange d-none d-md-block">
+  <div id="alle-foraar" class="orange d-none d-md-block">
     <div class="custom-container py-5 ">
       <div class="row align-items-start">
         <!--Overskrift m. link til forårssiden-->
@@ -133,14 +133,14 @@
       </div>
 
     </div>
-  </section>
+  </div>
 
 
   <!-- ===========================
        SOMMER-OPSKRIFTER
        =========================== -->
   <!--Skjules fra medium skærm (768px) og op-->
-  <section id="alle-sommer" class="custom-container d-none d-md-block">
+  <div id="alle-sommer" class="custom-container d-none d-md-block">
     <div class="row align-items-start py-5">
       <!--Overskrift m. link til sommersiden-->
       <a href="sommer.html">
@@ -168,7 +168,7 @@
         </a>
       </article>
     </div>
-  </section>
+  </div>
 
 
 
@@ -177,7 +177,7 @@
        =========================== -->
   <!--Orange baggrund-->
   <!--Skjules fra medium skærm (768px) og ned-->
-  <section id="alle-efteraar" class="orange d-none d-md-block">
+  <div id="alle-efteraar" class="orange d-none d-md-block">
     <div class="custom-container py-5">
       <div class="row align-items-start">
         <!--Overskrift m. link til efterårssiden-->
@@ -207,7 +207,7 @@
         </article>
       </div>
     </div>
-  </section>
+  </div>
 
 
 
@@ -215,7 +215,7 @@
        VINTER-OPSKRIFTER
        =========================== -->
   <!--Skjules fra medium skærm (768px) og ned-->
-  <section id="alle-vinter" class="custom-container d-none d-md-block">
+  <div id="alle-vinter" class="custom-container d-none d-md-block">
     <div class="row align-items-start my-5">
       <a href="vinter.html">
         <h2>Vinter</h2>
@@ -242,19 +242,19 @@
         </a>
       </article>
     </div>
-  </section>
+  </div>
 
 
   <!-- ===========================
        KARUSSEL TIL MOBIL-VERISON
        =========================== -->
   <!--Karussel Forår-->
-  <main class="custom-container my-5 d-block d-md-none">
+  <div class="custom-container my-5 d-block d-md-none">
     <div class="row carousel-container">
 
       <!-- Forår -->
       <!--Kolonne: 12 / fylder hele siden-->
-      <section class="alle-foraar col-12 custom-container orange py-4">
+      <div class="alle-foraar col-12 custom-container orange py-4">
         <div id="carousel-foraar" class="carousel slide" data-bs-touch="false">
           <div class="carousel-inner">
             <a href="foraar.html">
@@ -289,11 +289,11 @@
             <span class="carousel-control-next-icon"></span>
           </button>
         </div>
-      </section>
+      </div>
 
       <!-- Sommer -->
       <!--Kolonne: 12 / fylder hele siden-->
-      <section class="alle-sommer col-12 py-4 custom-container">
+      <div class="alle-sommer col-12 py-4 custom-container">
         <div id="carousel-sommer" class="carousel slide" data-bs-touch="false">
           <a href="sommer.html">
             <h2 class="px-3">Sommer</h2>
@@ -328,11 +328,11 @@
             <span class="carousel-control-next-icon"></span>
           </button>
         </div>
-      </section>
+      </div>
 
       <!-- Efterår -->
       <!--Kolonne: 12 / fylder hele siden-->
-      <section class="alle-efteraar col-12 py-4 custom-container orange">
+      <div class="alle-efteraar col-12 py-4 custom-container orange">
         <div id="carousel-efteraar" class="carousel slide" data-bs-touch="false">
           <a href="efteraar.html">
             <h2 class="px-3">Efterår</h2>
@@ -367,11 +367,11 @@
             <span class="carousel-control-next-icon"></span>
           </button>
         </div>
-      </section>
+      </div>
 
       <!-- Vinter -->
       <!--Kolonne: 12 / fylder hele siden-->
-      <section class="alle-vinter col-12 py-4 custom-container">
+      <div class="alle-vinter col-12 py-4 custom-container">
         <div id="carousel-vinter" class="carousel slide" data-bs-touch="false">
           <a href="vinter.html">
             <h2 class="px-3">Vinter</h2>
@@ -406,10 +406,10 @@
             <span class="carousel-control-next-icon"></span>
           </button>
         </div>
-      </section>
+      </div>
 
     </div>
-  </main>
+  </div>
 
 
   <!-- ===========================
