--- a/alleopskrifter.html
+++ b/alleopskrifter.html
@@ -74,7 +74,7 @@
   <!-- ===========================
        INTRO-SEKTION
        =========================== -->
-  <header class="custom-container">
+  <header class="custom-container introduktion">
     <!--Grid-række fra BS-->
     <div class="row align-items-start my-5">
       <!--Tekstfelt til venstre-->
