--- a/alleopskrifter.html
+++ b/alleopskrifter.html
@@ -1,3 +1,4 @@
+
 <!doctype html>
 <html lang="en">
 
@@ -7,7 +8,6 @@
   <title>Alle Opskrifter - Sæsonbaserede Retter fra Lille Skål</title>
   <meta name="description" content="Se alle Lille Skåls lækre opskrifter samlet ét sted. Sæsonbaserede retter til små budgetter - fra friske sommerretter til varme vintermåltider.">
 
-
   <!--Bootstrap CSS-->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-4Q6Gf2aSP4eDXB8Miphtr37CMZZQ5oXLH2yaXMJ2w8e2ZtHTl7GptT4jmndRuHDT" crossorigin="anonymous">
@@ -16,7 +16,6 @@
 
   <!--Bootstrap ikoner-->
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.13.1/font/bootstrap-icons.min.css">
-
 
   <!--Google Fonts-->
   <link href="https://fonts.googleapis.com/css2?family=Fuzzy+Bubbles&display=swap" rel="stylesheet">
@@ -70,13 +69,12 @@
     </div>
   </nav>
 
-
   <!-- ===========================
        INTRO-SEKTION
        =========================== -->
   <header class="custom-container introduktion">
     <!--Grid-række fra BS-->
-    <div class="row align-items-start my-5 introduktion">
+    <div class="row align-items-start my-5">
       <!--Tekstfelt til venstre-->
       <!-- Kolonne: 12 på mobil, 7 på små skærme (576px) og op -->
       <div class="col-12 col-sm-7">
@@ -96,13 +94,12 @@
   </header>
 
 
-
   <!-- ===========================
        FORÅRS-OPSKRIFTER
        =========================== -->
   <!--Orange baggrund-->
   <!--Skjules fra medium skærm (768px) og ned-->
-  <div id="alle-foraar" class="orange d-none d-md-block">
+  <section id="alle-foraar" class="orange d-none d-md-block">
     <div class="custom-container py-5 ">
       <div class="row align-items-start">
         <!--Overskrift m. link til forårssiden-->
@@ -133,14 +130,13 @@
       </div>
 
     </div>
-  </div>
-
+  </section>
 
   <!-- ===========================
        SOMMER-OPSKRIFTER
        =========================== -->
   <!--Skjules fra medium skærm (768px) og op-->
-  <div id="alle-sommer" class="custom-container d-none d-md-block">
+  <section id="alle-sommer" class="custom-container d-none d-md-block">
     <div class="row align-items-start py-5">
       <!--Overskrift m. link til sommersiden-->
       <a href="sommer.html">
@@ -168,8 +164,7 @@
         </a>
       </article>
     </div>
-  </div>
-
+  </section>
 
 
   <!-- ===========================
@@ -177,7 +172,7 @@
        =========================== -->
   <!--Orange baggrund-->
   <!--Skjules fra medium skærm (768px) og ned-->
-  <div id="alle-efteraar" class="orange d-none d-md-block">
+  <section id="alle-efteraar" class="orange d-none d-md-block">
     <div class="custom-container py-5">
       <div class="row align-items-start">
         <!--Overskrift m. link til efterårssiden-->
@@ -207,15 +202,14 @@
         </article>
       </div>
     </div>
-  </div>
-
+  </section>
 
 
   <!-- ===========================
        VINTER-OPSKRIFTER
        =========================== -->
   <!--Skjules fra medium skærm (768px) og ned-->
-  <div id="alle-vinter" class="custom-container d-none d-md-block">
+  <section id="alle-vinter" class="custom-container d-none d-md-block">
     <div class="row align-items-start my-5">
       <a href="vinter.html">
         <h2>Vinter</h2>
@@ -242,19 +236,18 @@
         </a>
       </article>
     </div>
-  </div>
-
+  </section>
 
   <!-- ===========================
        KARUSSEL TIL MOBIL-VERISON
        =========================== -->
   <!--Karussel Forår-->
-  <div class="custom-container my-5 d-block d-md-none">
+  <main class="custom-container my-5 d-block d-md-none">
     <div class="row carousel-container">
 
       <!-- Forår -->
       <!--Kolonne: 12 / fylder hele siden-->
-      <div class="alle-foraar col-12 custom-container orange py-4">
+      <section class="alle-foraar col-12 custom-container orange py-4">
         <div id="carousel-foraar" class="carousel slide" data-bs-touch="false">
           <div class="carousel-inner">
             <a href="foraar.html">
@@ -289,11 +282,11 @@
             <span class="carousel-control-next-icon"></span>
           </button>
         </div>
-      </div>
+      </section>
 
       <!-- Sommer -->
       <!--Kolonne: 12 / fylder hele siden-->
-      <div class="alle-sommer col-12 py-4 custom-container">
+      <section class="alle-sommer col-12 py-4 custom-container">
         <div id="carousel-sommer" class="carousel slide" data-bs-touch="false">
           <a href="sommer.html">
             <h2 class="px-3">Sommer</h2>
@@ -328,11 +321,11 @@
             <span class="carousel-control-next-icon"></span>
           </button>
         </div>
-      </div>
+      </section>
 
       <!-- Efterår -->
       <!--Kolonne: 12 / fylder hele siden-->
-      <div class="alle-efteraar col-12 py-4 custom-container orange">
+      <section class="alle-efteraar col-12 py-4 custom-container orange">
         <div id="carousel-efteraar" class="carousel slide" data-bs-touch="false">
           <a href="efteraar.html">
             <h2 class="px-3">Efterår</h2>
@@ -367,11 +360,11 @@
             <span class="carousel-control-next-icon"></span>
           </button>
         </div>
-      </div>
+      </section>
 
       <!-- Vinter -->
       <!--Kolonne: 12 / fylder hele siden-->
-      <div class="alle-vinter col-12 py-4 custom-container">
+      <section class="alle-vinter col-12 py-4 custom-container">
         <div id="carousel-vinter" class="carousel slide" data-bs-touch="false">
           <a href="vinter.html">
             <h2 class="px-3">Vinter</h2>
@@ -406,11 +399,10 @@
             <span class="carousel-control-next-icon"></span>
           </button>
         </div>
-      </div>
+      </section>
 
     </div>
-  </div>
-
+  </main>
 
   <!-- ===========================
        FOOTER
@@ -465,7 +457,6 @@
       </div>
     </div>
   </footer>
-
 
   <!--Bootstrap-->
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/js/bootstrap.bundle.min.js"
