--- a/efteraar.html
+++ b/efteraar.html
@@ -79,7 +79,7 @@
       <!--Tekstfelt til venstre-->
       <!-- Kolonne: 12 på mobil, 7 på små skærme (576px) og op -->
       <div class="col-12 col-sm-7">
-        <h1>Efterår</h1>
+        <h1 class="overskrift-mobil">Efterår</h1>
         <p>Efteråret er tiden, hvor køkkenet bliver fyldt med de varme, dybe smage fra sæsonens råvarer. Det er en tid
           til både at lave mad for sig selv, når det er koldt udenfor, og til at samle vennerne omkring et måltid, der
           varmer både krop og sjæl.</p>
