--- a/faellesskaal.html
+++ b/faellesskaal.html
@@ -78,7 +78,6 @@
   </nav>
 
 
-  <!--UPS skal dette ikke laves om ift. hvad vi vælger i stedet for bordet. Laver ingen kommentar på denne del indtil vi ved hvad der skal være :)-->
   <!--HERO-SEKTION-->
   <!--BAGGRUNDSBILLEDE-->
   <!--position-relative: gør container til ref. for det, som skal placeres ovenpå-->
@@ -93,7 +92,7 @@
       <!--d-flex ....: centrerer tekst midt i billedet-->
       <div
         class="position-absolute top-0 start-0 w-100 h-100 d-flex flex-column justify-content-end align-items-center text-center">
-        <h1>Fælles-skål</h1>
+        <h1 class="overskrift-lille">Fælles-skål</h1>
       </div>
     </div>
   </div>
