--- a/foraar.html
+++ b/foraar.html
@@ -78,7 +78,7 @@
       <!--Tekstfelt til venstre-->
       <!-- Kolonne: 12 på mobil, 7 på små skærme (576px) og op -->
       <div class="col-12 col-sm-7">
-        <h1>Forår</h1>
+        <h1 class="overskrift-mobil">Forår</h1>
         <p>Foråret er her, og det samme er alle de sprøde, friske råvarer, vi har savnet gennem vinteren. Det er tid til
           at slippe lyset ind i køkkenet og lade årstidens grønt spille hovedrollen i enkle og lækre
           retter.</p>
