--- a/sommer.html
+++ b/sommer.html
@@ -79,7 +79,7 @@
       <!--Tekstfelt til venstre-->
       <!-- Kolonne: 12 på mobil, 7 på små skærme (576px) og op -->
       <div class="col-12 col-sm-7">
-        <h1>Sommer</h1>
+        <h1 class="overskrift-mobil">Sommer</h1>
         <p>Sommermånederne inviterer til madlavning i alle tempoer - hvad enten du laver noget simpelt til dig selv
           efter en lang dag, eller inviterer vennerne til aftensmad i gården eller parken. Maden må gerne være nem,
           frisk og fuld af farver.
