--- a/vinter.html
+++ b/vinter.html
@@ -78,7 +78,7 @@
       <!--Tekstfelt til venstre-->
       <!-- Kolonne: 12 på mobil, 7 på små skærme (576px) og op -->
       <div class="col-12 col-sm-7">
-        <h1>Vinter</h1>
+        <h1 class="overskrift-mobil">Vinter</h1>
         <p>Vinteren har lagt sig over byen, og køkkenet bliver et naturligt samlingspunkt. Det er sæson for varme
           måltider, dybe smage og råvarer, der kan lidt mere end man tror – også selvom de ser rustikke ud.</p>
       </div>
