--- a/alleopskrifter.html
+++ b/alleopskrifter.html
@@ -78,7 +78,7 @@
       <!--Tekstfelt til venstre-->
       <!-- Kolonne: 12 på mobil, 7 på små skærme (576px) og op -->
       <div class="col-12 col-sm-7">
-        <h1>Alle opskrifter</h1>
+        <h1 class="overskrift-lille">Alle opskrifter</h1>
         <h4>Gør mere med mindre - lækre måltider til små budgetter.</h4>
         <p>Frisk forår, let sommer, varm vinter eller smagfuldt efterår? Her finder du nemme opskrifter med sæsonens
           danske råvarer - perfekt til både hverdagsmad og hyggelige måltider.</p>
