--- a/alleopskrifter.html
+++ b/alleopskrifter.html
@@ -144,14 +144,14 @@
       </a>
       <!--Første opskrift-->
       <article class="col text-center">
-        <a href="sommer1.html"><img src="img/sommer/sommer1billede1.png" alt="Lilleskåls sommeropskrift: Sommersalat med jordbær, burrata og nem focaccia"></a>
+        <a href="sommer1.html"><img src="img/sommer1.png" alt="Lilleskåls sommeropskrift: Sommersalat med jordbær, burrata og nem focaccia"></a>
         <a href="sommer1.html">
           <h3>Sommersalat med jordbær, burrata og nem focaccia</h3>
         </a>
       </article>
       <!--Anden opskrift-->
       <article class="col text-center">
-        <a href="sommer2.html"><img src="img/sommer1.png" alt="Lilleskåls sommeropskrift: Sommer-tacos med ærtemos og grillede grøntsager"></a>
+        <a href="sommer2.html"><img src="img/sommer/sommer1billede1.png" alt="Lilleskåls sommeropskrift: Sommer-tacos med ærtemos og grillede grøntsager"></a>
         <a href="sommer2.html">
           <h3>Sommer-tacos med ærtemos og grillede grøntsager</h3>
         </a>
