--- a/faellesskaal.html
+++ b/faellesskaal.html
@@ -163,7 +163,7 @@
   <!-- ===========================
        E-MAGASIN TILMELDING
        =========================== -->
-  <section class="orange">
+  <section class="orange" id="emagasin-sektion">
     <div class="custom-container py-5">
       <!-- Gutter: 3 på mellemstore skærme (≥768px), 5 på store skærme (≥992px)-->
       <div class="row g-md-3 g-lg-5">
@@ -210,51 +210,23 @@
   <section class="custom-container my-5">
     <!-- Gutter: 3 på mellemstore skærme (≥768px), 5 på store skærme (≥992px) -->
     <div class="row g-md-3 g-lg-5">
-      <!--Carousel-->
-      <div class="col-md-6 col-12">
-        <div id="carouselExample" class="carousel slide">
-          <div class="carousel-inner">
-            <div class="carousel-item active">
+      <!--VIDEO-->
 
-              <picture>
-                <img src="img/stemning/digital1.png" alt="Sommerbord med Lilleskåls madret">
-              </picture>
+        <video class="offset-3 col-6 offset-md-0 col-md-4 offset-lg-1 col-lg-3" controls>
+          <source src="lilleskaal-video-instagram.mp4" type="video/mp4">
+          Din browser understøtter ikke video-tagget.
+        </video>        
 
-            </div>
-            <div class="carousel-item">
 
-              <picture>
-                <img src="img/stemning/digital2.png" alt="Sommerbord med Lilleskåls madret">
-              </picture>
-
-            </div>
-            <div class="carousel-item">
-
-              <picture>
-                <img src="img/stemning/digital3.png" alt="Sommerbord med Lilleskåls madret">
-              </picture>
-
-            </div>
-
-          </div>
-          <button class="carousel-control-prev" type="button" data-bs-target="#carouselExample" data-bs-slide="prev">
-            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-            <span class="visually-hidden">Previous</span>
-          </button>
-          <button class="carousel-control-next" type="button" data-bs-target="#carouselExample" data-bs-slide="next">
-            <span class="carousel-control-next-icon" aria-hidden="true"></span>
-            <span class="visually-hidden">Next</span>
-          </button>
-        </div>
+      <div class="col-lg-2">
+        <img src="img/illustrationer/jordbaer.png" alt="Jordbær">
       </div>
-
-
 
       <!-- ===========================
        DEL GLÆDEN ONLLINE - TEKST
        =========================== -->
       <!-- Kolonne: 12 på mobil, 6 på mellemstore skærme (≥768px) -->
-      <section class="col-md-6 col-12 pt-5">
+      <section class="col-md-8 col-12  col-lg-6 pt-5 pt-md-0">
         <h2>Del glæden online</h2>
         <p>Bliv en del af vores madunivers - direkte fra indbakken.
           Et par gange om måneden sender vi vores e-magasin fyldt med sæsonbaserede opskrifter, ideer til budgetvenlig
