--- a/index.html
+++ b/index.html
@@ -343,8 +343,12 @@
   </div>
 
 
-
-
+  <!-- ===========================
+       POP OP MED E-MAGASIN
+       =========================== -->
+<a href="faellesskaal.html#emagasin-sektion" class="emagasin-popup">
+ <img src="img/popup.png" alt="">
+</a>
 
 
   <!-- ===========================
