--- a/omos.html
+++ b/omos.html
@@ -148,7 +148,7 @@
   </aside>
 
  <!-- ===========================
-       FÆLLESSKAB-AFSNIT M. BORD - LINKER TIL FÆLLES-SKÅL SIDEN 
+       FÆLLESSKAB-AFSNIT - LINKER TIL FÆLLES-SKÅL SIDEN 
        =========================== -->
   <section class="orange position-relative faelles-bord">
     <a class="falles-link" href="faellesskaal.html">
