--- a/faellesskaal.html
+++ b/faellesskaal.html
@@ -218,8 +218,8 @@
         </video>        
 
 
-      <div class="col-lg-2">
-        <img src="img/illustrationer/jordbaer.png" alt="Jordbær">
+      <div class="col-lg-2 d-none d-lg-block" style="margin-left: -50px;">
+        <a href="https://www.instagram.com/lille_skaal/"><img src="img/insta-jordbaer.png" alt="Jordbær"></a>
       </div>
 
       <!-- ===========================
