--- a/faellesskaal.html
+++ b/faellesskaal.html
@@ -212,21 +212,21 @@
     <div class="row g-md-3 g-lg-5">
       <!--VIDEO-->
 
-        <video class="offset-3 col-6 offset-md-0 col-md-4 offset-lg-1 col-lg-3" controls>
+        <video class="offset-3 col-6 offset-md-0 col-md-4 offset-lg-1 col-lg-3 position-relative" controls>
           <source src="lilleskaal-video-instagram.mp4" type="video/mp4">
           Din browser understøtter ikke video-tagget.
         </video>        
 
 
-      <div class="col-lg-2 d-none d-lg-block" style="margin-left: -50px;">
-        <a href="https://www.instagram.com/lille_skaal/"><img src="img/insta-jordbaer.png" alt="Jordbær"></a>
+      <div class="col-lg-2 d-none d-lg-block insta-jordbaer position-absolute">
+        <a href="https://www.instagram.com/lille_skaal/" target="_blank"><img src="img/insta-jordbaer.png" alt="Jordbær"></a>
       </div>
 
       <!-- ===========================
        DEL GLÆDEN ONLLINE - TEKST
        =========================== -->
       <!-- Kolonne: 12 på mobil, 6 på mellemstore skærme (≥768px) -->
-      <section class="col-md-8 col-12  col-lg-6 pt-5 pt-md-0">
+      <section class="col-md-8 col-12  offset-lg-2 col-lg-6 pt-5 pt-md-0">
         <h2>Del glæden online</h2>
         <p>Bliv en del af vores madunivers - direkte fra indbakken.
           Et par gange om måneden sender vi vores e-magasin fyldt med sæsonbaserede opskrifter, ideer til budgetvenlig
