--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@
       <!--Tekstfelt m. introduktion til side-->
       <!-- Kolonne: 12 på mobil, 6 på små skærme (≥576px) og op -->
       <div class="col-12 col-sm-6">
-        <p>LILLE SKÅL ønsker at skabe et fællesskab omkring budgetvenlig hverdagsmad lavet med omtanke – med sæsonens
+        <p>Lille Skål ønsker at skabe et fællesskab omkring budgetvenlig hverdagsmad lavet med omtanke – med sæsonens
           råvarer og simple opskrifter til dig med et lille køkken og stor appetit på smag.</p>
       </div>
       <!--Illustration til højre-->
