--- a/index.html
+++ b/index.html
@@ -10,8 +10,6 @@
     content="Oplev Lille Skål - din madplatform med fokus på sæsonens friske råvarer, bæredygtige og budgetvenlige opskrifter samt et inspirerende fællesskab for unge i Storkøbenhavn.">
 
 
-
-
   <!--Bootstrap CSS-->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-4Q6Gf2aSP4eDXB8Miphtr37CMZZQ5oXLH2yaXMJ2w8e2ZtHTl7GptT4jmndRuHDT" crossorigin="anonymous">
@@ -117,8 +115,8 @@
         <img class="logo-forside" src="img/logovandmaling.png" alt="Lilleskål logo">
         <h4 class="call-to-action"><a href="alleopskrifter.html">
             <picture>
-              <source media="(min-width: 768px)" srcset="img/opskriftknapstor.png">
-              <img src="img/opskriftknapmobil.png" alt="">
+              <source media="(min-width: 768px)" srcset="img/storknap.png" class="cta-img">
+              <img src="img/lilleknap.png" alt="" class="cta-img">
             </picture>
           </a></h4>
       </div>
@@ -347,7 +345,7 @@
        POP OP MED E-MAGASIN
        =========================== -->
 <a href="faellesskaal.html#emagasin-sektion" class="emagasin-popup">
- <img src="img/popup.png" alt="">
+ <img src="img/popup2.png" alt="">
 </a>
 
 
