--- a/faellesskaal.html
+++ b/faellesskaal.html
@@ -171,7 +171,7 @@
         <article class="col-12 col-md-6 tilmelding-boks-faellesskaal">
           <h2>Bliv inspireret i din indbakke</h2>
           <p>Hos Lille Skål lever madglæden videre langt ud over køkkenbordet. Vores online madunivers er skabt til dig, der elsker budgetvenlige opskrifter, sæsonens råvarer og ærlig madinspiration i øjenhøjde. <br> <br> På vores website og Instagram deler vi nemme hverdagsretter, tips til mindre madspild og hyggelige madøjeblikke - alt sammen i et uformelt fællesskab med andre madglade unge. 
-            <br><br> Vil du se, hvad der rører sig netop nu? Tag et kig til højre og få et sneak peek af den aktuelle udgave af vores e-magasin, hvor du finder friske opskrifter, event info og meget mere </p>
+            <br><br> Vil du se, hvad der rører sig netop nu? Her kan du få et sneak peek af den aktuelle udgave af vores e-magasin, hvor du finder friske opskrifter, event info og meget mere </p>
 
           <!--Kan skrive sin mail vha. js og få mail m. e-magasin-->
            <!--Kan skrive sin mail vha. js og få mail m. e-magasin-->
@@ -227,18 +227,15 @@
        =========================== -->
       <!-- Kolonne: 12 på mobil, 6 på mellemstore skærme (≥768px) -->
       <section class="col-md-8 col-12  offset-lg-2 col-lg-6 pt-5 pt-md-0">
-        <h2>Del glæden online</h2>
-        <p>Bliv en del af vores madunivers - direkte fra indbakken.
-          Et par gange om måneden sender vi vores e-magasin fyldt med sæsonbaserede opskrifter, ideer til budgetvenlig
-          madlavning, og små historier fra fællesskabet.
+        <h2>Følg med på Instagram </h2>
+        <p>Bliv en del af maduniverset – lige der, hvor du er. På vores Instagram deler vi inspirerende opskrifter, gode tips til madspild, og små historier fra fællesskabet, der gør hverdagen lidt sjovere.
           <br>
-          Du får også tips til at undgå madspild, nyheder om kommende events og fællesspisninger - og mulighed for at
-          høre om afholdte events.
+          Glæd dig til nyheder om kommende events, fællesspisninger og masser af stemning, som du kan tage med dig – hver dag.
           <br>
           <br>
-          Tilmeld dig vores e-magasin og få et fast dryp af madinspiration, fællesskab og stemning - lige der, hvor du
-          er.
+          Hop med på rejsen, og få et dagligt drys madglæde og fællesskab direkte i feedet!
         </p>
+        <a href="https://www.instagram.com/lille_skaal/" target="blank"><p>Se vores Instagram her</p></a>
       </section>
 
 
