--- a/vinter2.html
+++ b/vinter2.html
@@ -45,7 +45,7 @@
 
           <!-- Custom dropdown-menu til sæsoner-->
           <li class="nav-item dropdown vores-dropdown">
-            <a class="nav-link dropbtn dropdown-toggle" href="alleopskrifter.html">Opskrifter</a>
+            <a class="nav-link dropbtn dropdown-toggle" href="alleopskrifter.html">Alle Opskrifter</a>
             <div class="dropdown-content">
               <a href="sommer.html">Sommer</a>
               <a href="efteraar.html">Efterår</a>
