--- a/alleopskrifter.html
+++ b/alleopskrifter.html
@@ -404,6 +404,18 @@
     </div>
   </main>
 
+    <!-- ===========================
+       POP OP MED TILMELDING AF E-MAGASIN 
+       =========================== -->
+<div class="emagasin-popup">
+  <a href="faellesskaal.html#emagasin-sektion">
+    <img src="img/popup2.png" alt="">
+  </a>
+  <button class="close-popup">✕</button>
+</div>
+
+  
+
   <!-- ===========================
        FOOTER
        =========================== -->
