--- a/faellesskaal.html
+++ b/faellesskaal.html
@@ -169,7 +169,7 @@
       <div class="row g-md-3 g-lg-5">
         <!-- Kolonne: 12 på mobil, 6 på mellemstore skærme (≥768px)-->
         <article class="col-12 col-md-6 tilmelding-boks-faellesskaal">
-          <h2>Bliv inspireret i din indbakke</h2>
+          <h2>Tilmeld dig vores E-magasin</h2>
           <p>Hos Lille Skål lever madglæden videre langt ud over køkkenbordet. Vores online madunivers er skabt til dig, der elsker budgetvenlige opskrifter, sæsonens råvarer og ærlig madinspiration i øjenhøjde. <br> <br> På vores website og Instagram deler vi nemme hverdagsretter, tips til mindre madspild og hyggelige madøjeblikke - alt sammen i et uformelt fællesskab med andre madglade unge. 
             <br><br> Vil du se, hvad der rører sig netop nu? Her kan du få et sneak peek af den aktuelle udgave af vores e-magasin, hvor du finder friske opskrifter, event info og meget mere </p>
 
