--- a/index.html
+++ b/index.html
@@ -329,7 +329,7 @@
 
 
   <!-- ===========================
-       FÆLLESSKAB-AFSNIT M. BORD - LINKER TIL FÆLLES-SKÅL SIDEN
+       FÆLLESSKAB-AFSNIT - LINKER TIL FÆLLES-SKÅL SIDEN
        =========================== -->
   <div class="orange position-relative faelles-bord">
     <a class="falles-link" href="faellesskaal.html">
@@ -344,9 +344,16 @@
   <!-- ===========================
        POP OP MED E-MAGASIN
        =========================== -->
-<a href="faellesskaal.html#emagasin-sektion" class="emagasin-popup">
+<!-- <a href="faellesskaal.html#emagasin-sektion" class="emagasin-popup">
  <img src="img/popup2.png" alt="">
-</a>
+</a> -->
+
+<div class="emagasin-popup">
+  <a href="faellesskaal.html#emagasin-sektion">
+    <img src="img/popup2.png" alt="">
+  </a>
+  <button class="close-popup">✕</button>
+</div>
 
 
   <!-- ===========================
