--- a/omos.html
+++ b/omos.html
@@ -159,7 +159,16 @@
     </a>
   </section>
 
-
+  <!-- ===========================
+       POP OP MED TILMELDING AF E-MAGASIN 
+       =========================== -->
+       <div class="emagasin-popup">
+        <a href="faellesskaal.html#emagasin-sektion">
+          <img src="img/popup2.png" alt="">
+        </a>
+        <button class="close-popup">✕</button>
+      </div>
+      
 
 
 
